Add Firebase Hosting configuration

--- a/firebase.json
+++ b/firebase.json
@@ -17,6 +17,23 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
+  "hosting": {
+    "public": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**",
+      "functions/**",
+      ".github/**",
+      "dataconnect/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
   "storage": [
     {
       "bucket": "cloud-beacon-55a40.firebasestorage.app",
